# narvi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  shell.nix
src/: .hart.rs.kate-swp  hart.rs  lib.rs  main.rs  util.rs
src/event-system/: Cargo.toml
src/event-system/src/: event.rs  event_queue.rs  lib.rs
src/event_system/: Cargo.toml
src/eventsys/: mod.rs
src/hart/: Cargo.toml  cache_l1.rs  extensions.rs  rv64i.rs
src/hart/extensions/: d.rs  f.rs  m.rs
src/hart/src/: hart.rs
src/harts/: Cargo.toml
src/harts/src/: hart.rs  inst.rs  lib.rs
src/harts/src/hart/: extensions.rs  rv64i.rs
src/harts/src/hart/extensions/: d.rs  f.rs  m.rs
src/machine/: Cargo.toml
src/machine/src/: lib.rs  main.rs
src/memory/: Cargo.toml
src/memory/src/: cache.rs  lib.rs  ram.rs
src/testing/: Cargo.toml
src/testing/src/: lib.rs  main.rs
src/tests/: Cargo.toml
src/tests/src/: lib.rs
