[package]
name = "narvi"
version = "0.1.0"
edition = "2024"

[dependencies]
rounding_mode = { git = "https://github.com/AntonioDrumond/rust-rounding-mode", rev = "b4bfeafe1dcfcaf527b7faa48b31070f6a414822" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

[[bin]]
name = "narvi"
path = "src/main.rs"
