[workspace]
members = [
    "src/harts",
    "src/memory",
    "src/machine",
    "src/testing",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
rounding_mode = { git = "https://github.com/AntonioDrumond/rust-rounding-mode", rev = "b4bfeafe1dcfcaf527b7faa48b31070f6a414822" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
