[workspace]
members = [
    "src/event-system",
    "src/harts",
    "src/memory",
    "src/machine",
    "src/testing",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
authors = [
    "Antônio Drumond Cota de Souza", 
    "Davi Ferreira Puddo", 
    "Mateus Henrique Medeiros Diniz"
]
edition = "2024"
homepage = "https://github.com/cart-pucminas/narvi"

[workspace.dependencies]
event-system = { path = "src/event-system" }
harts = { path = "src/harts" }
machine = { path = "src/machine" }
memory = { path = "src/memory" }
testing = { path = "src/testing" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
rounding_mode = { git = "https://github.com/AntonioDrumond/rust-rounding-mode", rev = "b4bfeafe1dcfcaf527b7faa48b31070f6a414822" }
