[package]
name = "machine"
version.workspace = true
license-file.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true

[dependencies]
event_system = { workspace = true }
harts = { workspace = true }
memory = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[[bin]]
name = "narvi-cli"
path = "src/main.rs"
